traefik/test_app/whoami_services.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: whoamihttp
      port: 80
      targetPort: 80

  selector:
    app: whoami
