traefik/test_app/whoami_ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: testapp

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`testk8app.paulgobero.com`) 
      kind: Rule
      services:
        - name: whoami
          kind: Service
          port: whoamihttp
  tls:
    certResolver: letsencrypt-production
    secretName: testapp-prod-cert-com-tls
